# View8

./: .gitattributes  .gitignore  AGENTS.md  LICENSE.md  NOTICE.md  README.md  decompiler.py  pyproject.toml  requirements.txt  v8_builder.py  view8.py  view8_snir_sample.disasm
.github/workflows/: tests.yml
Disassembler/: v8dasm.cpp
IR/: __init__.py  snir_schema.json  v8_lifter.py
Parser/: parse_v8cache.py  sfi_file_parser.py  shared_function_info.py  v8_version.py
Simplify/: simplify.py
Translate/: jump_blocks.py  translate_table.py
docs/: TECHNICAL_SPEC.md
patches/: README.md
patches/v8/: PATCH_GUIDE.md
tests/: test_view8.py
tools/: README.md  recover_from_snir.py
